added meta tags in index.html for project preview

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Turn Up the Volume, Turn Down the Prices"
-      content="Web site created using create-react-app"
+      name="description"
+      content="Turn Up the Volume, Turn Down the Prices"
     />
+    <meta name="title" property="og:title" content="Sound" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://res.cloudinary.com/dfryxohde/image/upload/v1636575500/Portfolio/Screen_Shot_2021-11-09_at_11.20.07_PM_oo1wvj.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
